[build-system]
requires = ["setuptools>=61.0.0", "regex"]
build-backend = "setuptools.build_meta"

[project]
name = "sanjuuni"
authors = [{name = "JackMacWindows", email = "jackmacwindowslinux@gmail.com"}]
version = "0.1.2"
description = "Converts images and videos into a format suitable for ComputerCraft, based on sanjuuni."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["computercraft", "images"]
license = "GPL-2.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion"
]

[tool.setuptools]
packages = ["sanjuuni"]
py-modules = ["sanjuuni"]
